Remove DEFAULT_PRIORITY in favor of null